# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: audit.yml  general.yml
.sqlx/: query-cb0b66f81081ed331ce51df4678303d672eafec33bbffe8bfb77167732d442b6.json
configuration/: base.yaml  production.yaml
migrations/: 20240430015107_make_status_not_null_in_subscriptions.sql  20240430015407_create_subscriptions_tokens_table.sql  20240511152515_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: mod.rs
src/routes/login/: login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
